Fixed spacing issue on right margin

--- a/artmap/style.css
+++ b/artmap/style.css
@@ -58,7 +58,7 @@ button {
 
 #sidebar {
 	margin: 0 auto;
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	right: 0px;
 	z-index: 100;
